--- a/views/edit-question.handlebars
+++ b/views/edit-question.handlebars
@@ -1,25 +1,34 @@
-async function editFormHandler(event) {
-    event.preventDefault();
+<article>
+    <a href="/dashboard"> &larr; Back to dashboard</a>
+    <h2>
+        Edit Question
+    </h2>
+    <form class="edit-question-form">
+        <div>
+            <input name="question-title" type="text" value="{{question.title}}" />
+        </div>
+        <div>
+            {{question.vote_count}} {{format_plural "point" question.vote_count}} by you on {{moment question.created_at format="ddd DD/MM/YYYY HH:mm A"}}
+            |
+            <a href="/post/{{question.id}}">{{question.comments.length}} {{format_plural "comment" question.comments.length}}</a>
+        </div>
+        <button type="submit">Save Question</button>
+        <button type="button" class="delete-question-btn">Delete Question</button>
+    </form>
+</article>
 
-    const title = document.querySelector('input[name="question-title"]').value.trim();
-    const id = window.location.toString().split('/')[
-        window.location.toString().split('/').length - 1
-    ];
-    const response = await fetch(`/api/posts/${id}`, {
-        method: 'PUT',
-        body: JSON.stringify({
-            title
-        }),
-        headers: {
-            'Content-Type': 'application/json'
-        }
-    });
+<form class="answer-form">
+    <div>
+        <textarea name="answer-body"></textarea>
+    </div>
 
-    if (response.ok) {
-        document.location.replace('/dashboard/');
-    } else {
-        alert(response.statusText);
-    }
-}
+    <div>
+        <button type="submit">add answer</button>
+    </div>
+</form>
 
-document.querySelector('.edit-question-form').addEventListener('submit', editFormHandler);
+{{> answer question.answers}}
+
+<script src="/javascript/edit-question.js"></script>
+<script src="/javascript/delete-question.js"></script>
+<script src="/javascript/answer.js"></script>
