--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,9 +1,9 @@
-<ol>
-    <ol>
+<div>
+    <div>
         {{#each questions as |question|}}
-        <li>
+        <div>
             {{> question-info question }}
-        </li>
+        </div>
         {{/each}}
-    </ol>
-</ol>
+    </div>
+</div>
