--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,22 +1,22 @@
-<section>
-    <h2>Create New Question</h2>
-
-    <form id="new-question-form">
-        <div>
-            <label for="question-title">Title</label>
-            <input type="text" id="question-title" name="question-title" />
+<section class="d-flex flex-column align-items-center">
+    <h2 class="text-center">Create A New Question</h2>
+    <form id="new-question-form" style="width: 30rem;" >
+        <div class="mb-3">
+            <label for="question-title" class="form-label">Title</label>
+            <input type="text" class="form-control" id="question-title" name="question-title">
         </div>
-        <div>
-            <label for="question-content">Content</label>
-            <input id="question-content" name="question-content" />
+        <div class="mb-3">
+            <label for="question-content" class="form-label">Question</label>
+            <textarea class="form-control" id="question-content" name="question-content" rows="3"></textarea>
         </div>
-        <button type="submit" class="btn">Create</button>
+        <button type="submit" class="btn btn-outline-primary">Create</button>
     </form>
+
 </section>
 
 {{#if questions.length}}
 <section>
-    <h2>Your Questions</h2>
+    <h2 class="text-center">Your Questions</h2>
     <ol>
         {{#each questions as |question|}}
         <li>
