--- a/views/partials/answer.handlebars
+++ b/views/partials/answer.handlebars
@@ -1,12 +1,14 @@
 <div class="answers">
     {{#each this}}
     <section class="answer">
-        <div class="meta">
-            {{answer.username}} on {{moment created_at format="ddd DD/MM/YYYY HH:mm A"}}
-        </div>
-        <div class="text">
+        <div class="text mt-4">
             {{answer_text}}
         </div>
+        <div >
+            {{parent.username}} on {{moment created_at format="ddd DD/MM/YYYY HH:mm A"}}
+        </div>
+         {{vote_count}} {{format_plural "point" vote_count}}
+         <button type="button" class="second-vote-btn">vote</button>
     </section>
     {{/each}}
 </div>
