--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,31 +1,35 @@
-<form id="login-form">
-    <div>
-        <label for="email-login">email:</label>
-        <input type="text" id="email-login" />
-    </div>
-    <div>
-        <label for="password-login">password:</label>
-        <input type="password" id="password-login" />
-    </div>
-    <div>
-        <button type="submit">login</button>
-    </div>
-</form>
-<form id="signup-form">
-    <div>
-        <label for="username-signup">username:</label>
-        <input type="text" id="username-signup" />
-    </div>
-    <div>
-        <label for="email-signup">email:</label>
-        <input type="text" id="email-signup" />
-    </div>
-    <div>
-        <label for="password-signup">password:</label>
-        <input type="password" id="password-signup" />
-    </div>
-    <div>
-        <button type="submit">signup</button>
-    </div>
-</form>
+<section class="d-flex flex-column align-items-center">
+    <h2 class="text-center">Login</h2>
+    <form id="login-form" style="width: 30rem;">
+        <div class="mb-3">
+            <label for="email-login" class="form-label">Email</label>
+            <input type="text" class="form-control" id="email-login" name="email-login">
+        </div>
+        <div class="mb-3">
+            <label for="password-login" class="form-label">Password</label>
+            <input class="form-control" id="password-login" name="password-login" rows="3"></input>
+        </div>
+        <button type="submit" class="btn btn-outline-primary">Login</button>
+    </form>
+
+    <h2 class="text-center">Register</h2>
+    <form id="signup-form" style="width: 30rem;">
+        <div class="mb-3">
+            <label for="username-signup" class="form-label">Username</label>
+            <input type="text" class="form-control" id="username-signup" name="username-signup" rows="3"></input>
+        </div>
+        <div class="mb-3">
+            <label for="email-signup" class="form-label">Email</label>
+            <input type="text" class="form-control" id="email-signup" name="email-signup">
+        </div>
+        <div class="mb-3">
+            <label for="password-signup" class="form-label">Password</label>
+            <input type="password" class="form-control" id="password-signup" name="password-signup" rows="3"></input>
+        </div>
+        <button type="submit" class="btn btn-outline-primary">Login</button>
+    </form>
+</section>
+
+
+
 <script src="/javascript/login.js"></script>
