--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,26 +7,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css"/>
     <title>Baby Aid</title>
 </head>
 
-<body>
-    <nav>
-        <a href="/">Home</a>
-        {{#if loggedIn}}
-        <a href="/dashboard">Dashboard</a>
-        <button id="logout">logout</button>
-        {{else}}
-        <a href="/login">login</a>
-        {{/if}}
+<body class="whole">
+    <nav class="navbar">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                  <a href="/">Home</a>
+                  {{#if loggedIn}}
+                  <a href="/dashboard">Dashboard</a>
+                  <button id="logout">logout</button>
+                  {{else}}
+                  <a href="/login">login</a>
+                  {{/if}}
+                </div>
+            </div>
+         </div>
     </nav>
     <main>
-        {{{body}}}
+        <div class="container">
+            <div class="row d-flex justify-content-center">
+                <div class="col">
+                    {{{body}}}
+                 </div>
+            </div>
+        </div>
     </main>
-    <footer>
-        Copyright &copy; 2021-
-        <script>document.write(new Date().getFullYear())</script>
-        Jennifer Lucas, Brad Litman, Sandy Sanders. All Rights Reserved</p>
+    <footer class="navbar fixed-bottom">
+        <div class="container footer">
+            <div class="row">
+                <div class="col">
+                  Copyright &copy; 2021-
+                  <script>document.write(new Date().getFullYear())</script>
+                  Jennifer Lucas, Brad Litman, Sandy Sanders. All Rights Reserved</p>
+                </div>
+            </div>
+        </div>
     </footer>
 
     {{#if loggedIn}}
