answer_id is placed on page but invisible

--- a/views/partials/answer.handlebars
+++ b/views/partials/answer.handlebars
@@ -1,6 +1,7 @@
 <div class="answers">
     {{#each this}}
     <section class="answer">
+        <h1 class="answer-id" style="height:0;width:0;overflow:hidden;">{{id}}</h1>
         <div class="text mt-4">
             {{answer_text}}
         </div>
