--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -26,7 +26,7 @@
             <label for="password-signup" class="form-label">Password</label>
             <input type="password" class="form-control" id="password-signup" name="password-signup" rows="3"></input>
         </div>
-        <button type="submit" class="btn btn-outline-primary">Login</button>
+        <button type="submit" class="btn btn-outline-primary">Register</button>
     </form>
 </section>
 
