--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/style.css"/>
+    <link rel="stylesheet" href="/css/style.css" />
     <title>Baby Aid</title>
 </head>
 
@@ -16,23 +16,23 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col">
-                  <a href="/">Home</a>
-                  {{#if loggedIn}}
-                  <a href="/dashboard">Dashboard</a>
-                  <button id="logout">logout</button>
-                  {{else}}
-                  <a href="/login">login</a>
-                  {{/if}}
+                    <a href="/">Home</a>
+                    {{#if loggedIn}}
+                    <a href="/dashboard">Dashboard</a>
+                    <button id="logout">logout</button>
+                    {{else}}
+                    <a href="/login">login</a>
+                    {{/if}}
                 </div>
             </div>
-         </div>
+        </div>
     </nav>
     <main>
         <div class="container">
             <div class="row d-flex justify-content-center">
                 <div class="col">
                     {{{body}}}
-                 </div>
+                </div>
             </div>
         </div>
     </main>
@@ -40,9 +40,9 @@
         <div class="container footer">
             <div class="row">
                 <div class="col">
-                  Copyright &copy; 2021-
-                  <script>document.write(new Date().getFullYear())</script>
-                  Jennifer Lucas, Brad Litman, Sandy Sanders. All Rights Reserved</p>
+                    Copyright &copy; 2021-
+                    <script>document.write(new Date().getFullYear())</script>
+                    Jennifer Lucas, Brad Litman, Sandy Sanders. All Rights Reserved</p>
                 </div>
             </div>
         </div>
@@ -51,6 +51,9 @@
     {{#if loggedIn}}
     <script src="/javascript/logout.js"></script>
     {{/if}}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
