--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,7 +36,7 @@
             </div>
         </div>
     </main>
-    <footer class="navbar">
+    <footer class="navbar position-absolute">
         <div class="container footer">
             <div class="row">
                 <div class="col">
