fixed title, footer and buttons

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 .whole {
-    border: rgb(50, 65, 206) solid 15px;
+    
     background-color:rgb(243, 243, 232);
     background-image: url("../images/952696.jpg") ;
     background-size: cover;
@@ -7,3 +7,9 @@
 #login-form  signup-form {
     align-content:center
 }
+.hero {
+    text-align: center;
+    font-weight: bold;
+    
+}
+ 
