fixed css on single-question page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,7 +42,7 @@
                 <div class="col">
                     Copyright &copy; 2021-
                     <script>document.write(new Date().getFullYear())</script>
-                    Jennifer Lucas, Brad Litman, Sandy Sanders. All Rights Reserved</p>
+                    Brad Litman, Jennifer Lucas, Sandy Sanders. All Rights Reserved</p>
                 </div>
             </div>
         </div>
