--- a/views/partials/answer.handlebars
+++ b/views/partials/answer.handlebars
@@ -1,12 +1,12 @@
 <div class="d-flex flex-column align-items-center mt-3">
     {{#each this}}
-    <div class="answer card mt-2" style="width: 18rem;">
+    <div class="answer card mt-2" style="width: 30rem;">
         <div class="card-body">
             <h6 class="card-subtitle mb-2 text-muted">{{parent.username}} answered on {{moment created_at format="ddd DD/MM/YYYY HH:mm A"}}</h6>
             <p class="card-text"> {{answer_text}}</p>
             {{vote_count}} {{format_plural "point" vote_count}}
         </div>
-        <button type="button" class="second-vote-btn" data-answerId={{id}}>vote</button>
+        <button type="button" class="answer-vote-btn" data-answerId={{id}}>vote</button>
     </div>
     {{/each}}
 </div>
@@ -19,7 +19,7 @@
                 <h5 class="modal-title" id="exampleModalLabel">Vote Duplicate</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">That is great you like this Question so much you would like to vote again. Unfortunately, we only allow one vote per account</div>
+            <div class="modal-body">Great answer right! Only one per account though</div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             </div>
