--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,12 +15,12 @@
     <nav >
         <div class="container"> 
             <div >               
-                    <a class="btn btn-primary btn-sm disabled" role="button" href="/">Home</a>
+                    <a class="btn btn-primary btn-sm" role="button" href="/">Home</a>
                     {{#if loggedIn}}
-                    <a class="btn btn-primary btn-sm disabled"href="/dashboard">Dashboard</a>
-                    <button class="btn btn-primary btn-sm disabled" id="logout">logout</button>
+                    <a class="btn btn-primary btn-sm"href="/dashboard">Dashboard</a>
+                    <button class="btn btn-primary btn-sm" id="logout">logout</button>
                     {{else}}
-                    <a class="btn btn-primary btn-sm disabled" href="/login">login</a>
+                    <a class="btn btn-primary btn-sm" href="/login">login</a>
                     {{/if}}
                 </div>
             </div>
