made footer stick to bottom

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -41,15 +41,10 @@
             </div>
         </div>
     </main>
-    <footer class="navbar">
-        <div class="container">
-            
-                <div class="class="align-bottom">
-                    Copyright &copy; 2021-
-                    <script>document.write(new Date().getFullYear())</script>
-                    Brad Litman, Jennifer Lucas, Sandy Sanders. All Rights Reserved</p>
-                </div>
-        </div>
+   <footer id="bottom-footer">
+             Copyright &copy; 2021-
+             <script>document.write(new Date().getFullYear())</script>
+             Brad Litman, Jennifer Lucas, Sandy Sanders. All Rights Reserved</p>
     </footer>
 
     {{#if loggedIn}}
