--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,14 @@
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+  
+main {
+    flex: 1;
+}
+
 .whole {
-    
     background-color:rgb(243, 243, 232);
     background-image: url("../images/952696.jpg") ;
     background-size: cover;
@@ -7,9 +16,14 @@
 #login-form  signup-form {
     align-content:center
 }
+
 .hero {
     text-align: center;
     font-weight: bold;
     
 }
  
+#bottom-footer {
+        text-align: center;
+        margin-top: 40px;
+}
