--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -26,7 +26,7 @@
                             <h6 class="card-subtitle mb-2 text-muted">Created by {{parent.username}} on {{moment
                                 created_at
                                 format="ddd
-                                DD/MM/YYYY HH:mm A"}}</h6>
+                                MM/DD/YYYY hh:mm a"}}</h6>
                             <p class="card-text">{{content}}</p>
                             <p class="card-text">
                                 {{answers.length}} {{format_plural "answer" answers.length}}
