--- a/views/partials/answer.handlebars
+++ b/views/partials/answer.handlebars
@@ -2,7 +2,7 @@
     {{#each this}}
     <div class="answer card mt-2" style="width: 30rem;">
         <div class="card-body">
-            <h6 class="card-subtitle mb-2 text-muted">{{parent.username}} answered on {{moment created_at format="ddd DD/MM/YYYY HH:mm A"}}</h6>
+            <h6 class="card-subtitle mb-2 text-muted">{{parent.username}} answered on {{moment created_at format="ddd MM/DD/YYYY hh:mm a"}}</h6>
             <p class="card-text"> {{answer_text}}</p>
             {{vote_count}} {{format_plural "point" vote_count}}
         </div>
