--- a/views/partials/question-info.handlebars
+++ b/views/partials/question-info.handlebars
@@ -4,7 +4,7 @@
             <h3 class="card-title">{{title}}</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Created by {{parent.username}} on {{moment created_at
                     format="ddd
-                    DD/MM/YYYY HH:mm A"}}</h6>
+                    MM/DD/YYYY hh:mm a"}}</h6>
                 <p class="card-text">{{content}}</p>
                 <p class="card-text">
                     {{answers.length}} {{format_plural "answer" answers.length}}
