username now on homepage

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,9 +1,22 @@
 <div>
     <div>
         {{#each questions as |question|}}
-        <div>
-            {{> question-info question }}
-        </div>
+        <article class="d-flex justify-content-center">
+            <div class="card text-dark bg-light mb-3" style="width: 30rem;">
+                <div class="card-body">
+                    <h3 class="card-title">{{title}}</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">Created by {{parent.username}} on {{moment created_at
+                            format="ddd
+                            MM/DD/YYYY hh:mm a"}}</h6>
+                        <p class="card-text">{{content}}</p>
+                        <p class="card-text">
+                            {{answers.length}} {{format_plural "answer" answers.length}}
+                            with {{vote_count}} {{format_plural "point" vote_count}}
+                        </p>
+                        <a href="/question/{{id}}" class="btn btn-primary stretched-link">See post</a>
+                </div>
+            </div>
+        </article>
         {{/each}}
     </div>
 </div>
