--- a/views/partials/question-info.handlebars
+++ b/views/partials/question-info.handlebars
@@ -2,7 +2,7 @@
     <div class="card text-dark bg-light mb-3" style="width: 30rem;">
         <div class="card-body">
             <h3 class="card-title">{{title}}</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Created by {{parent.username}} on {{moment created_at
+                <h6 class="card-subtitle mb-2 text-muted">Created by {{username}} on {{moment created_at
                     format="ddd
                     MM/DD/YYYY hh:mm a"}}</h6>
                 <p class="card-text">{{content}}</p>
