--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,16 +36,10 @@
             </div>
         </div>
     </main>
-    <footer class="navbar">
-        <div class="container footer">
-            <div class="row">
-                <div class="col">
-                    Copyright &copy; 2021-
-                    <script>document.write(new Date().getFullYear())</script>
-                    Brad Litman, Jennifer Lucas, Sandy Sanders. All Rights Reserved</p>
-                </div>
-            </div>
-        </div>
+    <footer id="bottom-footer">
+        Copyright &copy; 2021-
+        <script>document.write(new Date().getFullYear())</script>
+        Brad Litman, Jennifer Lucas, Sandy Sanders. All Rights Reserved</p>
     </footer>
 
     {{#if loggedIn}}
