--- a/views/single-question.handlebars
+++ b/views/single-question.handlebars
@@ -1,4 +1,4 @@
-<article class="question">
+<article class="question text-center">
     {{> question-info question}}
 <div class="d-flex justify-content-center">
     <button type="button" class="question-vote-btn btn btn-outline-success">vote</button>
