--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -9,7 +9,7 @@
             <label for="question-content" class="form-label">Question</label>
             <textarea class="form-control" id="question-content" name="question-content" rows="3"></textarea>
         </div>
-        <button type="submit" class="btn btn-outline-primary">Create</button>
+        <button type="submit" class="btn btn-primary">Create</button>
     </form>
 </section>
 
