--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,7 +9,7 @@
             <label for="password-login" class="form-label">Password</label>
             <input class="form-control" id="password-login" name="password-login" rows="3"></input>
         </div>
-        <button type="submit" class="btn btn-outline-primary">Login</button>
+        <button type="submit" class="btn btn-primary">Login</button>
     </form>
 
     <h2 class="text-center">Register</h2>
@@ -26,7 +26,7 @@
             <label for="password-signup" class="form-label">Password</label>
             <input type="password" class="form-control" id="password-signup" name="password-signup" rows="3"></input>
         </div>
-        <button type="submit" class="btn btn-outline-primary">Register</button>
+        <button type="submit" class="btn btn-primary">Register</button>
     </form>
 </section>
 
