--- a/views/partials/answer.handlebars
+++ b/views/partials/answer.handlebars
@@ -2,16 +2,19 @@
     {{#each this}}
     <div class="answer card mt-2" style="width: 30rem;">
         <div class="card-body">
-            <h6 class="card-subtitle mb-2 text-muted text-center">{{parent_username}} answered on {{moment created_at format="ddd MM/DD/YYYY hh:mm a"}}</h6>
+            <h6 class="card-subtitle mb-2 text-muted text-center">{{parent_username}} answered on {{moment created_at
+                format="ddd MM/DD/YYYY hh:mm a"}}</h6>
             <p class="card-text text-center"> {{answer_text}}</p>
             {{vote_count}} {{format_plural "point" vote_count}}
         </div>
-        <button type="button" class="answer-vote-btn" data-answerId={{id}}>vote</button>
+        <div class="text-center pb-1">
+            <button type="button" class="answer-vote-btn btn btn-success w-25" data-answerId={{id}}>vote</button>
+        </div>
     </div>
     {{/each}}
 </div>
 
-{{!-- Modal  --}}
+{{!-- Modal --}}
 <div class="modal fade" id="myAnswerModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
