--- a/views/single-question.handlebars
+++ b/views/single-question.handlebars
@@ -1,7 +1,7 @@
 <article class="question text-center">
     {{> question-info question}}
 <div class="d-flex justify-content-center">
-    <button type="button" class="question-vote-btn btn btn-outline-success">vote</button>
+    <button type="button" class="question-vote-btn btn btn-success" style="width:125px">vote</button>
 </div>
 </article>
 
@@ -15,7 +15,7 @@
             <textarea class="form-control" id="answer-body" name="answer-body"></textarea>
         </div>
         <div class="d-flex justify-content-center">
-        <button type="submit" class="btn btn-outline-primary">add answer</button>
+        <button type="submit" class="btn btn-primary" style="width:150px">add answer</button>
         </div>
     </form>
 </div>
