--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
     </nav>
     <section class="hero"  >
         <div class="hero-cta">
-            <h1> Baby-Aid</h1>
+            <p> Baby Aid </p>
         </div>
     </section>      
     </div>
