--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,8 +20,12 @@ main {
 .hero {
     text-align: center;
     font-weight: 900;
-    color: orangered;
+    color: #12bb61;
     font-size: 100px; 
+    -moz-text-stroke-color: black;
+    -webkit-text-stroke-color: black;
+    -moz-text-stroke-width: 2px;  
+    -webkit-text-stroke-width: 2px;
 }
  
 #bottom-footer {
